// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Alert Announcement 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Alert Alert-announcement"
  >
    <div
      className="Alert__icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bullhorn fa-w-18 "
        data-icon="bullhorn"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M576 240c0-23.63-12.95-44.04-32-55.12V32.01C544 23.26 537.02 0 512 0c-7.12 0-14.19 2.38-19.98 7.02l-85.03 68.03C364.28 109.19 310.66 128 256 128H64c-35.35 0-64 28.65-64 64v96c0 35.35 28.65 64 64 64h33.7c-1.39 10.48-2.18 21.14-2.18 32 0 39.77 9.26 77.35 25.56 110.94 5.19 10.69 16.52 17.06 28.4 17.06h74.28c26.05 0 41.69-29.84 25.9-50.56-16.4-21.52-26.15-48.36-26.15-77.44 0-11.11 1.62-21.79 4.41-32H256c54.66 0 108.28 18.81 150.98 52.95l85.03 68.03a32.023 32.023 0 0 0 19.98 7.02c24.92 0 32-22.78 32-32V295.13C563.05 284.04 576 263.63 576 240zm-96 141.42l-33.05-26.44C392.95 311.78 325.12 288 256 288v-96c69.12 0 136.95-23.78 190.95-66.98L480 98.58v282.84z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Alert__content"
    >
      <p
        className="Alert__title"
      >
        Announcement title
      </p>
      Announcement message
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Alert Error 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Alert Alert-error"
  >
    <div
      className="Alert__icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-triangle fa-w-18 "
        data-icon="exclamation-triangle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Alert__content"
    >
      <p
        className="Alert__title"
      >
        Error title
      </p>
      Error message
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Alert Info 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Alert Alert-info"
  >
    <div
      className="Alert__icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-info-circle fa-w-16 "
        data-icon="info-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Alert__content"
    >
      <p
        className="Alert__title"
      >
        Info title
      </p>
      Info message
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Alert Success 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Alert Alert-success"
  >
    <div
      className="Alert__icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check-circle fa-w-16 "
        data-icon="check-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Alert__content"
    >
      <p
        className="Alert__title"
      >
        Success title
      </p>
      Success message
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Alert Warning 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Alert Alert-warning"
  >
    <div
      className="Alert__icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-triangle fa-w-18 "
        data-icon="exclamation-triangle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Alert__content"
    >
      <p
        className="Alert__title"
      >
        Warning title
      </p>
      Warning message
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Alert With Dismiss 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Alert Alert-success"
  >
    <div
      className="Alert__icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check-circle fa-w-16 "
        data-icon="check-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Alert__content"
    >
      <p
        className="Alert__title"
      >
        Default title
      </p>
      Default message
    </div>
    <div
      className="Alert__close"
    >
      <button
        className="close"
        onClick={[Function]}
        type="button"
      >
        ×
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Card Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <section
    className="Card Card--lg"
  >
    <div
      className="Card__header"
    >
      <h2
        className="Card__title"
      >
        Large card with title
      </h2>
      <span
        className="Card__helper-text"
      >
        (helper text)
      </span>
    </div>
    <h3
      className="Card__subtitle"
    >
      And a subtitle
    </h3>
    <div>
      Use knobs to try out the different card sizes
    </div>
  </section>
</div>
`;

exports[`Storyshots Design System/Copy To Clipboard Button Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="CopyToClipboardButton"
  >
    <button
      aria-label="Copy to clipboard"
      className="CopyToClipboardButton btn"
      onClick={[Function]}
      tracking={
        Object {
          "getTrackingData": [Function],
          "trackEvent": [Function],
        }
      }
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-copy fa-w-14 "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <span
          className="CopyToClipboardButton__display-text"
        >
          Click to copy
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Copy To Clipboard Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="CopyToClipboardButton"
  >
    <button
      aria-label="Copy to clipboard"
      className="CopyToClipboardButton btn btn-outline-secondary"
      onClick={[Function]}
      tracking={
        Object {
          "getTrackingData": [Function],
          "trackEvent": [Function],
        }
      }
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-copy fa-w-14 "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <span
          className="CopyToClipboardButton__display-text"
        >
          Click to copy
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Copy To Clipboard Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="CopyToClipboard"
  >
    <span
      className="CopyToClipboard__copy-text"
    >
      Copy me!
    </span>
    <div
      className="CopyToClipboardButton"
    >
      <button
        aria-label="Copy to clipboard"
        className="CopyToClipboardButton btn"
        onClick={[Function]}
        tracking={
          Object {
            "getTrackingData": [Function],
            "trackEvent": [Function],
          }
        }
        type="button"
      >
        <span>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-copy fa-w-14 "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <form
    className="Form"
    id="form"
    method="POST"
    onSubmit={[Function]}
  >
    <div
      className="FormGroup"
      id="first-name"
    >
      <label
        className="InputLabel"
        htmlFor="first-name"
      >
        First name
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="first-name-input"
          name="first-name"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup"
      id="last-name"
    >
      <label
        className="InputLabel"
        htmlFor="last-name"
      >
        Last name
        <span
          className="InputLabel__helper-text"
        >
           (Required)
        </span>
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="last-name-input"
          name="last-name"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup"
      id="email"
    >
      <label
        className="InputLabel"
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="email-input"
          name="email"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormGroup FormGroup--is-invalid"
      id="phone"
    >
      <label
        className="InputLabel"
        htmlFor="phone"
      >
        Phone
        <span
          className="InputLabel__helper-text"
        >
           (Required)
        </span>
      </label>
      <div
        className="Input input-group"
      >
        <input
          className="Input form-control"
          disabled={false}
          id="phone-input"
          name="phone"
          onChange={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        className="FormGroup__invalid-feedback"
      >
        Invalid phone number
      </div>
    </div>
    <div
      className="RadioButtonGroup"
      name="radio-buttons"
    >
      <label
        className="FormControlLabel"
        htmlFor="first-radio"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            className="FormControlLabel__control"
            disabled={false}
            id="first-radio"
            name="radio-buttons"
            type="radio"
          />
          first choice
        </div>
      </label>
      <label
        className="FormControlLabel"
        htmlFor="second-radio"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            className="FormControlLabel__control"
            disabled={false}
            id="second-radio"
            name="radio-buttons"
            type="radio"
          />
          second choice
        </div>
      </label>
    </div>
    <button
      className="btn btn-primary"
      type="submit"
    >
      Save
    </button>
  </form>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Control Label Checkbox 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    className="FormControlLabel"
    htmlFor="checkbox"
  >
    <div
      className="FormControlLabel__label"
    >
      <input
        checked={false}
        className="FormControlLabel__control"
        disabled={false}
        id="checkbox"
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      Labeled checkbox
    </div>
  </label>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Control Label Checkbox With Children 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    className="FormControlLabel FormControlLabel--bordered FormControlLabel--with-children"
    htmlFor="checkbox"
  >
    <div
      className="FormControlLabel__label"
    >
      <input
        checked={false}
        className="FormControlLabel__control"
        id="checkbox"
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      Labeled checkbox
    </div>
    <div
      className="FormControlLabel__children"
    >
      <div>
        This checkbox has some helper text too!
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Control Label Radio 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    className="FormControlLabel"
    htmlFor="radio"
  >
    <div
      className="FormControlLabel__label"
    >
      <input
        checked={false}
        className="FormControlLabel__control"
        disabled={false}
        id="radio"
        name="radio"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      Labeled radio
    </div>
  </label>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Control Label Radio With Children 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    className="FormControlLabel FormControlLabel--bordered FormControlLabel--with-children"
    htmlFor="radio"
  >
    <div
      className="FormControlLabel__label"
    >
      <input
        checked={false}
        className="FormControlLabel__control"
        disabled={false}
        id="radio"
        name="radio"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      Labeled radio
    </div>
    <div
      className="FormControlLabel__children"
    >
      <div>
        This radio button has some helper text too!
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="default"
  >
    
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="default-input"
        name="default"
        onChange={[Function]}
        placeholder="Placeholder text"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group Required 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-required"
  >
    <label
      className="InputLabel"
      htmlFor=""
    >
      Label
      <span
        className="InputLabel__helper-text"
      >
         (Required)
      </span>
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="with-required-input"
        name="required"
        onChange={[Function]}
        placeholder="Text is required"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Checkbox Button Group 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup FormGroup--bordered"
    id="with-checkbox-button-group"
  >
    <label
      className="InputLabel"
      htmlFor="checkbox-button-group"
    >
      Form Group with checkbox button group
      <span
        className="InputLabel__helper-text"
      >
         (
        with some helper text
        )
      </span>
    </label>
    <div
      className="CheckboxButtonGroup"
      id="button-group"
    >
      <label
        className="FormControlLabel"
        htmlFor="value-1"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            checked={false}
            className="FormControlLabel__control"
            id="value-1"
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          Value 1
        </div>
      </label>
      <label
        className="FormControlLabel"
        htmlFor="value-2"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            checked={false}
            className="FormControlLabel__control"
            id="value-2"
            onChange={[Function]}
            type="checkbox"
            value="2"
          />
          Value 2
        </div>
      </label>
      <label
        className="FormControlLabel"
        htmlFor="value-3"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            checked={false}
            className="FormControlLabel__control"
            id="value-3"
            onChange={[Function]}
            type="checkbox"
            value="3"
          />
          Value 3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Errors 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup FormGroup--is-invalid"
    id="with-errors"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with errors
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="input"
        name="with-errors"
        onChange={[Function]}
        placeholder="Placeholder text"
        type="text"
        value=""
      />
    </div>
    <div
      className="FormGroup__invalid-feedback"
    >
      <ol
        className="FormGroup__invalid-feedback__list"
      >
        <li>
          <div>
            Sorry, we’re not able to accept this type of input. For more information, click 
            <a
              href="http://www.google.com"
            >
              here
            </a>
          </div>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Helper Text 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-helper-text"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Label
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="input"
        name="with-helper-text"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
    <div
      className="FormGroup__helper-text"
    >
      test helper text
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Label Tooltip 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-label"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Label
      <span
        aria-hidden="true"
        className="Tooltip__icon Tooltip__icon--gray"
        onClick={[Function]}
        onKeyPress={[Function]}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-question-circle fa-w-16 "
          data-icon="question-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control"
        disabled={false}
        id="input"
        name="with-label"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Leading And Trailing Icons 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-trailing-icon"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with input leading and trailing icons
    </label>
    <div
      className="Input input-group"
    >
      <div
        className="input-group-prepend"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <input
        className="Input form-control Input--with-leading-icon Input--with-trailing-icon"
        disabled={false}
        id="input"
        name="with-leading-and-trailing-icons"
        onChange={[Function]}
        placeholder="Placeholder text"
        type="text"
        value=""
      />
      <div
        className="input-group-append"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="FormGroup__helper-text"
    >
      with leading and trailing icons
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Leading Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-leading-icon"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with input leading icon
    </label>
    <div
      className="Input input-group"
    >
      <div
        className="input-group-prepend"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <input
        className="Input form-control Input--with-leading-icon"
        disabled={false}
        id="input"
        name="with-leading-icon"
        onChange={[Function]}
        placeholder="Placeholder text"
        type="text"
        value=""
      />
    </div>
    <div
      className="FormGroup__helper-text"
    >
      with leading icon
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Radio Button Group 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup FormGroup--bordered"
    id="with-radio-button-group"
  >
    <label
      className="InputLabel"
      htmlFor="radio-button-group"
    >
      Form Group with radio button group
      <span
        className="InputLabel__helper-text"
      >
         (
        with some helper text
        )
      </span>
    </label>
    <div
      className="RadioButtonGroup"
      name=""
    >
      <label
        className="FormControlLabel FormControlLabel--active"
        htmlFor="value-1"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            checked={true}
            className="FormControlLabel__control"
            disabled={false}
            id="value-1"
            name="choice"
            onChange={[Function]}
            type="radio"
            value="1"
          />
          Value 1
        </div>
      </label>
      <label
        className="FormControlLabel"
        htmlFor="value-2"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            checked={false}
            className="FormControlLabel__control"
            disabled={false}
            id="value-2"
            name="choice"
            onChange={[Function]}
            type="radio"
            value="2"
          />
          Value 2
        </div>
      </label>
      <label
        className="FormControlLabel"
        htmlFor="value-3"
      >
        <div
          className="FormControlLabel__label"
        >
          <input
            checked={false}
            className="FormControlLabel__control"
            disabled={false}
            id="value-3"
            name="choice"
            onChange={[Function]}
            type="radio"
            value="3"
          />
          Value 3
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Form Elements/Form Group With Trailing Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="FormGroup"
    id="with-trailing-icon"
  >
    <label
      className="InputLabel"
      htmlFor="input"
    >
      Form Group with input trailing icon
    </label>
    <div
      className="Input input-group"
    >
      <input
        className="Input form-control Input--with-trailing-icon"
        disabled={false}
        id="input"
        name="with-leading-icon"
        onChange={[Function]}
        placeholder="Placeholder text"
        type="text"
        value=""
      />
      <div
        className="input-group-append"
      >
        <div
          className="input-group-text"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="FormGroup__helper-text"
    >
      with trailing icon
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Pill Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Pill"
  >
    Test pill
  </div>
</div>
`;

exports[`Storyshots Design System/Popper Dark 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <p>
    reference element
  </p>
  <div
    className="Popper Popper--dark"
    data-placement="top"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    Dark Popper
  </div>
</div>
`;

exports[`Storyshots Design System/Popper Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <p>
    reference element
  </p>
  <div
    className="Popper"
    data-placement="top"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    Default Popper
  </div>
</div>
`;

exports[`Storyshots Design System/Profile Cell Large 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="ProfileCell ProfileCell--large"
  >
    <div
      className="ProfileCell__image"
    >
      <div
        aria-hidden={false}
        className="Avatar Avatar--large"
      >
        <div
          className="Avatar__circle"
        >
          <span
            className="Avatar__circle__initials"
          >
            RR
          </span>
        </div>
      </div>
    </div>
    <div
      className="ProfileCell__content"
      style={
        Object {
          "maxWidth": "none",
        }
      }
    >
      <h5
        className="ProfileCell__content__name"
      >
        Riley Researcher
      </h5>
      <div
        className="ProfileCell__content__subtitle"
      >
        <div>
          riley@userinterviews.com
        </div>
        <div>
          +1 888 888 8888
        </div>
        <div>
          (-5:00) America/New York
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Profile Cell Small 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="ProfileCell"
  >
    <div
      className="ProfileCell__image"
    >
      <div
        aria-hidden={false}
        className="Avatar"
      >
        <div
          className="Avatar__circle"
        >
          <span
            className="Avatar__circle__initials"
          >
            RR
          </span>
        </div>
      </div>
    </div>
    <div
      className="ProfileCell__content"
      style={
        Object {
          "maxWidth": "none",
        }
      }
    >
      <h5
        className="ProfileCell__content__name"
      >
        Riley Researcher
      </h5>
      <div
        className="ProfileCell__content__subtitle"
      >
        riley@userinterviews.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Profile Cell With Image 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="ProfileCell ProfileCell--large"
  >
    <div
      className="ProfileCell__image"
    >
      <div
        aria-hidden={false}
        className="Avatar Avatar--large"
      >
        <div
          className="Avatar__circle"
        >
          <img
            alt="Riley Researcher"
            onError={[Function]}
            src="https://i.kym-cdn.com/entries/icons/original/000/013/564/doge.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="ProfileCell__content"
      style={
        Object {
          "maxWidth": "none",
        }
      }
    >
      <h5
        className="ProfileCell__content__name"
      >
        Riley Researcher
      </h5>
      <div
        className="ProfileCell__content__subtitle"
      >
        <div>
          riley@userinterviews.com
        </div>
        <div>
          +1 888 888 8888
        </div>
        <div>
          (-5:00) America/New York
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Async Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="AsyncSelect css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              aria-label="Async select"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-fric97-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Async Labeled 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    htmlFor="async-select"
    id="async-label"
  >
    A labeled select
  </label>
  <div
    className="AsyncSelect css-2b097c-container"
    id="async-select"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="async-label"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-3-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-fric97-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="SingleSelect css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="Default select"
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-4-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-fric97-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Labeled 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <label
    htmlFor="labeled-select"
    id="select-label"
  >
    Labeled select
  </label>
  <div
    className="SingleSelect css-2b097c-container"
    id="labeled-select"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-labelledby="select-label"
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-7-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-fric97-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Loading 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="SingleSelect css-14jk2my-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-1wkj6wz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          aria-autocomplete="list"
          aria-label="Loading select"
          className="css-62g3xt-dummyInput"
          disabled={true}
          id="react-select-6-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-3igypj-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-fric97-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Selects/Single Searchable 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="SingleSelect css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-qv254q-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              aria-label="Searchable select"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-5-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-fric97-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles Typography 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-70"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-70--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-70--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-70
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1.5rem
        </li>
        <li>
          Line-height: 
          2rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-70
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-70--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-70--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-60"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-60--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-60--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-60
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1.25rem
        </li>
        <li>
          Line-height: 
          1.625rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-60
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-60--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-60--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-50"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-50--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-50--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-50
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1.125rem
        </li>
        <li>
          Line-height: 
          1.5rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-50
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-50--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-50--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-40"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-40--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-40--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-40
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          1rem
        </li>
        <li>
          Line-height: 
          1.375rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-40
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-40--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-40--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-30"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-30--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-30--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-30
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          0.875rem
        </li>
        <li>
          Line-height: 
          1.25rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-30
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-30--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-30--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-20"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-20--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-20--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-20
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          0.75rem
        </li>
        <li>
          Line-height: 
          1rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-20
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-20--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-20--light
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="TypographyRow"
  >
    <div
      className="TypographyRow__Example"
    >
      <div
        className="font-type-10"
      >
        <p>
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-10--bold"
        >
          The fastest way to recruit research participants
        </p>
        <p
          className="font-type-10--light"
        >
          The fastest way to recruit research participants
        </p>
      </div>
    </div>
    <div
      className="TypographyRow__Specs"
    >
      <ul>
        <li>
          <strong>
            font-type-10
          </strong>
        </li>
        <li>
          Type: 
          Lato, Arial, sans-serif
        </li>
        <li>
          Size: 
          0.625rem
        </li>
        <li>
          Line-height: 
          0.875rem
        </li>
        <li>
          Weight: 
          400 / Regular
        </li>
        <li>
          Text-transform: 
          Uppercase
        </li>
        <li>
          Letter-spacing: 
          0.0625rem
        </li>
      </ul>
      <ul>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-10
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-10--bold
          </div>
        </li>
        <li>
          <div
            className="Pill Pill--blue Pill--sm"
          >
            font-type-10--light
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Blue 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#EBF6FF",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#C9E5FC",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#92CBFC",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#5AA4E5",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#337AB7",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#155B99",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0D4473",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#083054",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#032847",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxBlue900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Gray 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#F9F9F9",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F1F1F1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E1E1E1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#D1D1D1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#A1A1A1",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#818181",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#616161",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#444444",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#101010",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGray900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Green 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#F3FFF2",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E3FDE0",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#BFFEB8",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#85DC7A",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#6DBD63",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#47A13B",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#297021",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1A5313",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0E4207",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxGreen900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Orange 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#FDEAD2",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FCDFB9",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FAC988",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7B258",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F59C27",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E18C28",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#AE6608",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#7D4A06",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#653B05",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxOrange900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Styles/Color Palette Red 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "height": "20rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#F0D9D9",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed100
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E8C5CB",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed200
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#EB7A7A",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed300
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#E44E4E",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed400
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FF4E00",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed500
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#C71F1F",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed600
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#B11B1B",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed700
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#9B1818",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed800
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#851414",
          "flexBasis": "11%",
          "height": "100%",
        }
      }
    >
      <p
        style={
          Object {
            "backgroundColor": "#FFF",
            "color": "#000",
            "fontSize": "1rem",
            "margin": "1rem",
            "textAlign": "center",
          }
        }
      >
        uxRed900
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Toast Auto Dismiss Toast Message 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Toast"
  />
  <div>
    <p>
      Click the button to see a toast message.  Use the knobs to try different types!
    </p>
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Toast Toast Message 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="Toast"
  />
  <div>
    <p>
      Click the button to see a toast message.  Use the knobs to try different types!
    </p>
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Tooltip Default 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip Gray Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon Tooltip__icon--gray"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip Green Icon 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon Tooltip__icon--primary"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip Light 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip With Header 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip With Html 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Design System/Tooltip With Tracking 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <span
    aria-hidden="true"
    className="Tooltip__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;
